# whatsappy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  whatsappy.py
src/whatsappy/: __init__.py  client.py
src/whatsappy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_button_messages.py  test_list_messages.py  test_text_messages.py
