[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.curlylint.rules]
image_alt = true

[project]
name = "whatsappy"
version = "1.1.0"
authors = [
  { name="Matías Glasner Vivanco", email="mglasner10@gmail.com" },
]
description = "Python for WhatsApp Business Cloud API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mglasner/whatsappy"
"Bug Tracker" = "https://github.com/mglasner/whatsappy/issues"

[tool.mypy]
files = "**/*.py"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
