[metadata]
name = whatsappy
version = 0.1.0
author = Matías Glasner Vivanco
author_email = mglasner10@gmail.com
description = Python for WhatsApp Business Cloud API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mglasner/whatsappy
project_urls =
    Bug Tracker = https://github.com/mglasner/whatsappy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests==2.27.1

[options.packages.find]
where = src

[flake8]
max-line-length = 256
extend-ignore = E203
per-file-ignores =
    *:INP001
docstring-convention = google
